--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-
+      - name: Checkout verification
+        uses: actions/checkout@v5
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
