--- a/macos/.devcontainer/codespaces.yml
+++ b/macos/.devcontainer/codespaces.yml
@@ -1,9 +1,11 @@
 services:
   macos:
-    image: dockurr/macos
     container_name: macos
+    image: ghcr.io/dockur/macos
     environment:
-      VERSION: "14"
+      RAM_SIZE: "half"
+      DISK_SIZE: "max"
+      CPU_CORES: "max"
     devices:
       - /dev/kvm
       - /dev/net/tun
@@ -15,5 +17,5 @@ services:
       - 5900:5900/udp
     volumes:
       - ./macos:/storage
-    restart: always
+    restart: on-failure
     stop_grace_period: 2m
