--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -214,7 +214,7 @@ jobs:
           name: vs-artifacts
           path: artifacts
   sanitize:
-    name: development
+    name: env cleanup
     runs-on: ubuntu-24.04
     needs: [build]
     env:
