--- a/macos/compose.yml
+++ b/macos/compose.yml
@@ -4,13 +4,14 @@ services:
     container_name: macos
     environment:
       VERSION: "14"
+      WEB_PORT: "2500"
     devices:
       - /dev/kvm
       - /dev/net/tun
     cap_add:
       - NET_ADMIN
     ports:
-      - 8005:8005
+      - 2500:2500
       - 5900:5900/tcp
       - 5900:5900/udp
     volumes:
